--- a/src/work.ejs
+++ b/src/work.ejs
@@ -17,56 +17,56 @@
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://player.vimeo.com/video/196012460" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
             </div>
-            <p class="video-title">RANGE ROVER SPORT - <em>Inferno</em></p>
+            <p class="video-title mt-3 mb-5">RANGE ROVER SPORT - <em>Inferno</em></p>
           </div>
 
           <div class="poster mb-5 mt-3">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://player.vimeo.com/video/178618648" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
             </div>
-            <p class="video-title">BMW SCRAMBLER - <em>Teaser</em></p>
+            <p class="video-title mt-3 mb-5">BMW SCRAMBLER - <em>Teaser</em></p>
           </div>
 
           <div class="poster mb-5 mt-3">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://player.vimeo.com/video/120320873" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
             </div>
-            <p class="video-title">MARK KNOPFLER - <em>Tracker</em></p>
+            <p class="video-title mt-3 mb-5">MARK KNOPFLER - <em>Tracker</em></p>
           </div>
 
           <div class="poster mb-5 mt-3">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://player.vimeo.com/video/79350677" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
             </div>
-            <p class="video-title">VOLKSWAGEN - <em>Rally</em></p>
+            <p class="video-title mt-3 mb-5">VOLKSWAGEN - <em>Rally</em></p>
           </div>
 
           <div class="poster mb-5 mt-3">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://player.vimeo.com/video/45605348" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
             </div>
-            <p class="video-title">PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em></p>
+            <p class="video-title mt-3 mb-5">PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em></p>
           </div>
 
           <div class="poster mb-5 mt-3">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://player.vimeo.com/video/60107207" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
             </div>
-            <p class="video-title">LACOSTE L!VE - <em>Tokyo</em></p>
+            <p class="video-title mt-3 mb-5">LACOSTE L!VE - <em>Tokyo</em></p>
           </div>
 
           <div class="poster mb-5 mt-3">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://player.vimeo.com/video/116001568" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
             </div>
-            <p class="video-title">VOLVO - <em>XC60</em></p>
+            <p class="video-title mt-3 mb-5">VOLVO - <em>XC60</em></p>
           </div>
 
           <div class="poster mb-5 mt-3">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://player.vimeo.com/video/61056995" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
             </div>
-            <p class="video-title">NIKON Imagination</p>
+            <p class="video-title mt-3 mb-5">NIKON Imagination</p>
           </div>
         </div>
       </div>
