--- a/src/partials/navbar.ejs
+++ b/src/partials/navbar.ejs
@@ -9,9 +9,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-uppercase" target="_top" href="/index.html">Commercials</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-uppercase" target="_blank" rel="noopener" href="https://vimeo.com/marcflennert">Shorts</a>
-                </li>
+              <li class="nav-item">
+                <a class="nav-link text-uppercase" target="_top" href="/shorts.html">Shorts</a>
+              </li>
                 <li class="nav-item">
                     <a class="nav-link text-uppercase" target="_blank" rel="noopener" href="http://photo.marcflennert.com">Photography</a>
                 </li>
