--- a/src/partials/shorts.ejs
+++ b/src/partials/shorts.ejs
@@ -1,6 +1,102 @@
 <div class="poster mb-5 mt-3">
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe src="https://player.vimeo.com/video/117235079" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/120320873" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
   </div>
-  <p class="video-title mt-3 mb-5">Mercedes-Benz - <em>Record</em></p>
+  <p class="video-title mt-3 mb-5">MARK KNOPFLER - <em>Tracker</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/196012460" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">RANGE ROVER SPORT - <em>Inferno Downhill Challenge</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/39935170" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">VOLVO - <em>Irv</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/37401807" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">ASICS - <em>I am made of blazing trails  (2nd Unit Photography)</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/45605348" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">PROJECT F1297 - <em>Music by Gesaffelstein ‘Viol’</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/37007030" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">BASEFLIGHT - <em>One way to the Eiger Teaser</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/313786630" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">LINCOLN - <em>Aviator (2nd Unit Photography)</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/83329880" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">LUMINOX - <em>Scott Cassell</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/330576120" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">MERCEDES-BENZ - <em>The ‘Making of’ Stronger than Gravity</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/213753947" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">PROJECT 1394D</p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/37094134" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">LAND ROVER - <em>Saxon</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/113414298" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">FORD - <em>Artitt Varotayonon</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/37397943" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">ASICS - <em>I am made of sweat not swagger (2nd Unit Photography)</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/37399134" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">ASICS - <em>I am made of the days you don’t see  (2nd Unit Photography)</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/37400674" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">ASICS - <em>I am made of belief not barriers (2nd Unit Photography)</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/171790025" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">BMW - <em>Scrambler Joy</em></p>
+</div>
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/37004884" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">ACTIVE O2 - <em>Making of Wingsuit</em></p>
 </div>
