Enlarge font and mobile nav hamburger.

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -6,6 +6,7 @@
 
 body {
   font-family: 'Courier New', sans-serif !important;
+  font-size: 125%;
 }
 
 .nav-link {
@@ -29,6 +30,16 @@ body {
 
 .video-title {
   color: #000000;
+  margin-bottom: 5rem !important;
+}
+
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-toggler-icon {
+  width: 3.5em !important;
+  height: 3.5em !important;
 }
 
 // Responsive Typography
