--- a/src/partials/navbar.ejs
+++ b/src/partials/navbar.ejs
@@ -4,7 +4,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse justify-content-center mt-5" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link text-uppercase" target="_top" href="/index.html">Commercials</a>
