--- a/src/partials/shorts.ejs
+++ b/src/partials/shorts.ejs
@@ -30,7 +30,7 @@
 </div>
 <div class="poster mb-5 mt-3">
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe src="https://player.vimeo.com/video/37007030" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/336425444" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
   </div>
   <p class="video-title mt-3 mb-5">BASEFLIGHT - <em>One way to the Eiger Teaser</em></p>
 </div>
@@ -60,7 +60,7 @@
 </div>
 <div class="poster mb-5 mt-3">
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe src="https://player.vimeo.com/video/37094134" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/336431468" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
   </div>
   <p class="video-title mt-3 mb-5">LAND ROVER - <em>Saxon</em></p>
 </div>
@@ -92,7 +92,7 @@
   <div class="embed-responsive embed-responsive-16by9">
     <iframe src="https://player.vimeo.com/video/171790025" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
   </div>
-  <p class="video-title mt-3 mb-5">BMW - <em>Scrambler Joy</em></p>
+  <p class="video-title mt-3 mb-5">BMW MOTORRAD - <em>Scrambler Joy</em></p>
 </div>
 <div class="poster mb-5 mt-3">
   <div class="embed-responsive embed-responsive-16by9">
