--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -13,6 +13,11 @@ body {
   font-size: 85%;
 }
 
+.bodycopy {
+  color: #666;
+  font-size: 77%
+}
+
 .copyright {
   color: #666;
   font-size: 50%;
