Update deps. Minor content updates.

--- a/src/partials/work.ejs
+++ b/src/partials/work.ejs
@@ -14,6 +14,13 @@
 
 <div class="poster mb-5 mt-3">
   <div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/384372222" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <p class="video-title mt-3 mb-5">APPLE - <em>Shot on iPhone 11 Pro</em></p>
+</div>
+
+<div class="poster mb-5 mt-3">
+  <div class="embed-responsive embed-responsive-16by9">
     <iframe src="https://player.vimeo.com/video/273904409" class="embed-responsive-item" frameborder="0" allowfullscreen></iframe>
   </div>
   <p class="video-title mt-3 mb-5">ALFA ROMEO - <em>You Don’t Need  (2nd Unit Photography)</em></p>
